feat: migration to svelte 5

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
+# Sanity project ID for identifying your specific project.
 VITE_SANITY_PROJECT_ID=""
+
+# Dataset name, typically "production" or "staging."
 VITE_SANITY_DATASET="production"
 
-## Also available on the client side, because studio is a SPA.
+# Secret for previewing drafts in Sanity Studio (accessible client-side).
 VITE_SANITY_PREVIEW_SECRET="any-random-string"
 
+# Read-only token for accessing the Sanity API (keep private).
 SANITY_API_READ_TOKEN=""
+
+# Write-access token for the Sanity API (highly sensitive, keep private).
 SANITY_API_WRITE_TOKEN=""
