--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "^1.30.4",
+		"@sveltejs/kit": "^2.12.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.4",
 		"@types/react": "^18.3.17",
 		"@types/react-dom": "^18.3.5",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -21,17 +22,17 @@
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.2",
 		"styled-components": "^6.1.13",
-		"svelte": "^3.59.2",
-		"svelte-check": "^2.10.3",
-		"svelte-preprocess": "^4.10.7",
+		"svelte": "^5.14.4",
+		"svelte-check": "^4.1.1",
+		"svelte-preprocess": "^6.0.3",
 		"svelte2tsx": "^0.5.23",
 		"ts-node": "^10.9.2",
 		"tslib": "^2.8.1",
-		"typescript": "^4.9.5",
-		"vite": "^4.5.5",
+		"typescript": "^5.7.2",
+		"vite": "^5.4.11",
 		"vite-plugin-windicss": "^1.9.4",
 		"windicss": "^3.5.6"
 	},
